# dream-preprocessor

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 2026-04-08-dream-system.md  ko.md  setup.md
skills/dream/: README.md  README_ko.md  SKILL.md  heartbeat.md
src/dream_preprocessor/: heartbeat.py  preprocess.py
src/heartbeat/: cli.py  core.py
