[project]
name = "claude-heartbeat"
version = "0.2.0"
description = "Periodic claude agent scheduler — wake Claude on schedule, run skills automatically"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dream = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heartbeat", "skills"]

[project.scripts]
heartbeat = "heartbeat.cli:main"
dream-heartbeat = "heartbeat.cli:main"
dream-prep = "skills.dream.preprocess:main"
